Adding some styling

--- a/index.html
+++ b/index.html
@@ -4,16 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>By Chris Hogben</title>
+
     <!-- CSS pertaining to styling the faux article -->
     <link rel="stylesheet" href="style/main.css">
     <!-- CSS pertaining to the ad -->
     <link rel="stylesheet" href="style/ad.css">
     <!-- scroll anim library -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <!-- G Font -->
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    
 </head>
 <body>
-    <nav>the nav bar</nav>
-    <div id="adbanner">lorem</div>
+    <nav>
+        <img id="burger" src="img/burger.svg" alt="menu">
+        <img src="img/ch_banner.svg" alt="Chris Hogben">
+    </nav>
     <section class="content">
         <p>Authentic cronut health goth, chambray celiac wolf lyft. Williamsburg occupy kogi messenger bag man bun minim cliche iceland pork belly poke. Magna ethical kombucha put a bird on it microdosing fam DIY la croix helvetica. Godard tattooed commodo 8-bit next level eiusmod. Taiyaki pickled cupidatat wayfarers. In pug trust fund art party, portland bitters qui glossier letterpress coloring book adaptogen hella. Ethical ramps thundercats shoreditch yuccie four loko.</p>
         <p>Whatever ad tacos, knausgaard forage venmo ugh portland gochujang sriracha. Meh street art ea fugiat. Typewriter adipisicing biodiesel tumblr 3 wolf moon waistcoat. Humblebrag umami veniam cliche 8-bit. Officia brooklyn heirloom whatever messenger bag street art minim activated charcoal dolore shoreditch deep v slow-carb freegan coloring book. Hoodie 3 wolf moon health goth, culpa intelligentsia single-origin coffee id vape palo santo chambray hot chicken.</p>
@@ -31,7 +39,6 @@
         <p>Synth yr af fam authentic jianbing anim cupidatat duis. Meditation authentic chambray humblebrag fanny pack VHS ethical. Cornhole fugiat pug whatever bicycle rights yuccie schlitz gentrify tousled four dollar toast viral neutra. Four loko affogato sartorial est. Pickled yr slow-carb paleo, flannel typewriter ugh snackwave. Williamsburg cred snackwave, disrupt irony narwhal venmo art party trust fund.</p>
         <p>Tilde pabst mlkshk humblebrag, labore bespoke roof party slow-carb meh craft beer leggings shoreditch lo-fi messenger bag taiyaki. Tacos cupidatat do you probably haven't heard of them cliche kitsch heirloom godard. Selfies yuccie semiotics, readymade gluten-free man braid in edison bulb synth trust fund. Affogato jianbing palo santo chartreuse proident, adaptogen tousled mixtape aute forage tilde air plant occupy intelligentsia. Subway tile shaman fixie tattooed typewriter thundercats lyft pok pok velit chicharrones jean shorts air plant iceland franzen schlitz. Fingerstache intelligentsia offal biodiesel nostrud glossier jean shorts, YOLO cronut yuccie roof party vinyl.</p>
     </section>
-    <button onClick="trigger()">Tell me</button>
 
     <!-- The fun stuff -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
